--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "styled-components": "^5.1.1",
     "terser-webpack-plugin": "2.3.5",
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
@@ -85,7 +86,8 @@
     ]
   },
   "devDependencies": {
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.5.3",
+    "static-site-generator-webpack-plugin": "^3.4.2",
     "style-loader": "^0.23.1"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
