--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "dev": "node ./scripts/start.js",
-    "start": "node ./scripts/start.js",
+    "dev": "node scripts/start.js",
+    "start": "node index.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
