--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
   },
   "scripts": {
     "dev": "node scripts/start.js",
-    "start": "node scripts/start.js",
+    "start": "node scripts/index.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
