--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "dev": "nodemon --inspect start.js",
-    "start": "node start.js",
+    "dev": "node scripts/start.js",
+    "start": "react-scripts start",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
