--- a/package.json
+++ b/package.json
@@ -67,11 +67,14 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "css-loader": "^3.5.3",
+    "static-site-generator-webpack-plugin": "^3.4.2",
+    "style-loader": "^0.23.1"
   },
   "scripts": {
-  "dev": "node scripts/start.js",
-  "start": "node scripts/start.js",
+    "dev": "node scripts/start.js",
+    "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
