--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "css-loader": "^3.5.3",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eject": "0.0.4",
@@ -37,6 +38,7 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "jwt-decode": "^2.2.0",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
@@ -60,6 +62,8 @@
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "static-site-generator-webpack-plugin": "^3.4.2",
+    "style-loader": "^0.23.1",
     "styled-components": "^5.1.1",
     "terser-webpack-plugin": "2.3.5",
     "ts-pnp": "1.1.6",
@@ -67,10 +71,7 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1",
-    "css-loader": "^3.5.3",
-    "static-site-generator-webpack-plugin": "^3.4.2",
-    "style-loader": "^0.23.1"
+    "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
     "dev": "node scripts/start.js",
