--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "4.3.1",
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "dev": "node scripts/start.js",
@@ -93,11 +94,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "css-loader": "^3.5.3",
-    "static-site-generator-webpack-plugin": "^3.4.2",
-    "style-loader": "^0.23.1"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
