--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "css-loader": "^3.5.3",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eject": "0.0.4",
@@ -153,5 +152,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^3.6.0"
   }
 }
