--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
-    "react-jss": "^10.1.1",
-    "react-redux": "^7.2.0",
+    "react-jss": "^10.4.0",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
@@ -63,15 +63,15 @@
     "semver": "6.3.0",
     "static-site-generator-webpack-plugin": "^3.4.2",
     "style-loader": "^0.23.1",
-    "styled-components": "^5.1.1",
+    "styled-components": "^5.2.0",
     "terser-webpack-plugin": "2.3.5",
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
     "dev": "node scripts/start.js",
